k8s/istio/gateway/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway
  servers:
    - port: 
        number: 80
        name: http
        protocol: http2
      hosts:
        - "*.fullcycle"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs-a
spec:
  hosts: 
    - "a.fullcycle"
  gateways:
    - ingress-gateway-k3s
  http:
    - route:
      - destination:
          host: nginx-service
          subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs-b
spec:
  hosts: 
    - "b.fullcycle"
  gateways:
    - ingress-gateway-k3s
  http:
    - route:
      - destination:
          host: nginx-service
          subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: v1
      labels:
        version: A
      # trafficPolicy:
      #   loadBalancer:
      #     simple: LEAST_CONN
    - name: v2
      labels:
        version: B
